--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && ./dist/index.js",
+    "build": "tsc",
+    "start": "tsc && node --es-module-specifier-resolution=node dist/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
